--- a/volunteer/package.json
+++ b/volunteer/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,6 +11,7 @@
     "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.7",
     "react-scripts": "4.0.3",
     "uniqid": "^5.3.0",
     "web-vitals": "^1.1.1",
