--- a/volunteer/package.json
+++ b/volunteer/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "uniqid": "^5.3.0",
     "web-vitals": "^1.1.1",
     "worker-loader": "^3.0.7"
