Update netlify toml file

--- a/volunteer/netlify.toml
+++ b/volunteer/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   base = "volunteer/"
   command = "npm run build"
-  publish = "volunteer/public"
+  publish = "volunteer/build"
   ignore = "false"
